docs: finaliza docs user handler
